--- a/tedxoxford/package.json
+++ b/tedxoxford/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-parallax": "^3.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.5.0",
