--- a/tedxoxford/package.json
+++ b/tedxoxford/package.json
@@ -9,12 +9,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.10.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-firebase-file-uploader": "^2.4.4",
     "react-ga": "^3.3.0",
+    "react-hook-form": "^7.17.5",
     "react-parallax": "^3.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
