--- a/tedxoxford/package.json
+++ b/tedxoxford/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
-    "firebase": "^8.10.0",
+    "firebase": "^9.4.1",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
+    "npm-check-updates": "^12.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-firebase-file-uploader": "^2.4.4",
     "react-ga": "^3.3.0",
